# GroupmeBot

./: .env  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  Procfile  README.md  alembic.ini  app.py  main.py  manage.py  pyproject.toml  requirements-full.txt  requirements.txt  setup.cfg  test.html  testGroupme.http  testPost copy.http  testPost.http
.github/workflows/: test.yml
alembic/: env.py
alembic/versions/: 78cf709bcb76_initial_migration_role_users.py
auth/: views.py
bot/: ESPN.py  abstinence.txt  admin.py  apps.py  bible.py  data.py  database.py  groupme.py  helpers.py  market.py  models.py  schemas.py  tests.py  urls.py  utils.py  views.py
bot/data/: options.json  players.json
groupmeBot/: asgi.py  settings.py  urls.py  wsgi.py
migrations/: env.py
migrations/versions/: 9d8ac46647e0_.py
templates/: base.html  home.html  messages.html  signup.html
tests/: conftest.py  helpers.py  test_bot.py  test_integration.py  test_main.py  test_unit.py
tests/bot/: test_bible.py  test_espn.py  test_groupme.py  test_market.py  test_models.py  test_utils.py
tests/bot/cassettes/: test_chart_invalid.yaml  test_chart_stock.yaml  test_evan_voyager.yaml  test_get_books.yaml  test_get_chapters.yaml  test_get_standings.yaml  test_get_stat.yaml  test_get_text_to_verse.yaml  test_get_text_to_verse_error.yaml  test_get_verse.yaml  test_group_info.yaml  test_list_groups.yaml  test_random_insult.yaml  test_remove_user.yaml  test_send_message.yaml  test_team_stats.yaml  test_upload_image.yaml  test_win_chance.yaml
(+20 files in other folders)
