[tool.poetry]
name = "groupmebot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.26.0"
beautifulsoup4 = "^4.10.0"
yfinance = "^0.1.64"
matplotlib = "^3.4.3"
python-dotenv = "^0.19.2"
psycopg2-binary = "^2.9.2"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"
SQLAlchemy = "^1.4.39"
Jinja2 = "^3.1.2"
alembic = "^1.8.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pre-commit = "^2.20.0"
pytest = "^7.1.2"
pytest-vcr = "^1.0.2"
pytest-mock = "^3.8.2"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
